added swagger for documentation